<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount_title">Bill Amount($): </string>
    <string name="tip_amount_percent_title">Tip Amount(%):</string>
    <string name="tip_amount_total">Tip Total($):</string>
    <string name="tip_amount_each">Tip Per Person($):</string>
    <string name="bill_total">Total($):</string>
    <string name="bill_total_each">Total Per Person($): </string>
    <string name="total">Total:</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="_0">0</string>
    <string name="person_1">1</string>
    <string name="person_s">Person(s):</string>
    <string name="default_value">0.00</string>
    <string name="person_minus_button">person minus button</string>
    <string name="person_add_button">person add button</string>
    <string name="default_tip">Default Tip</string>
    <string name="confirm">Confirm</string>
    <string name="pref_default_tip_key">pref_default_tip_key</string>
    <string name="default_tip_title">Set default tip</string>
    <string name="settings_title">Settings</string>
    <string name="pref_round_tip_key">pref_round_tip_key</string>
    <string name="round_tip_title">Round tip</string>
    <string name="round_tip_summary_on_msg">Round tip is on</string>
    <string name="round_tip_summary_off_msg">Round tip is off</string>
    <string name="home_title">Home</string>
    <string name="share_app_title">Share app</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
    <string name="tip_history_title">Tip history</string>
    <string name="action_share_tip">Share tip</string>
    <string name="date_title">Date:</string>
    <string name="tip_percent_title">Tip(%):</string>
    <string name="total_amount_title">Total Amount:</string>
</resources>
