<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="1"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="2"
        android:title="@string/action_reset"
        android:icon="@drawable/ic_reset"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share_tip"
        android:icon="@drawable/ic_share_white"
        app:showAsAction="always"/>

</menu>