<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/item_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Jan 01 2018" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal"-->
            <!--tools:ignore="NestedWeights">-->

            <!--<TextView-->
                <!--android:id="@+id/bill_amount_text_view"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/bill_amount_title" />-->

            <!--<TextView-->
                <!--android:id="@+id/item_bill_text_view"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--tools:text="125" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tip_person_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_percent_title" />

            <TextView
                android:id="@+id/item_tip_percent_text_view"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tip_amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount_total" />

            <TextView
                android:id="@+id/item_tip_amount_text_view"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="18.75" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_person_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount_title" />

            <TextView
                android:id="@+id/item_total_text_view"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="143.75" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/delete_button_description"
        android:src="@drawable/ic_delete_forever_grey" />

</LinearLayout>